cameraが動作するところまで到達

--- a/k3s/mjpg-streamer/deployment-mjpg-streamer.yaml
+++ b/k3s/mjpg-streamer/deployment-mjpg-streamer.yaml
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
       - image: fufuhu/mjpg-streamer:20190711
+        imagePullPolicy: IfNotPresent
         name: mjpg-streamer
         securityContext:
           privileged: true
